@@ -17,12 +17,9 @@ set_alarm_expiration(struct alarm_list *t, long tv_sec, long tv_usec)
 	t->tv.tv_usec = tv_usec;
 }
 
-void set_alarm_function(struct alarm_list *t,
-			void (*fcn)(struct alarm_list *a, void *data));
-
-void set_alarm_data(struct alarm_list *t, void *data);
-
-void init_alarm(struct alarm_list *t);
+void init_alarm(struct alarm_list *t,
+		void *data,
+		void (*fcn)(struct alarm_list *a, void *data));
 
 void add_alarm(struct alarm_list *alarm);
 
