@@ -58,6 +58,7 @@ o fix wrong invocations after prototype cleanup
 o set the return type of the parse functions to "void"
 o use the comma operator instead of curly braces
 o add missing function prototypes
+o merge several *_alarm() functions into init_alarm()
 
 version 0.9.5 (2007/07/29)
 ------------------------------
